--- a/proxy/src/main/resources/static/index.html
+++ b/proxy/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
             document.getElementById("getrespmsg").innerHTML =
             this.responseText;
         }
-        xhttp.open("GET", "/lucasseq/1");
+        xhttp.open("GET", "/lucasseq/" + nameVar);
         xhttp.send();
     }
 </script>
